--- a/package.json
+++ b/package.json
@@ -62,12 +62,16 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.6.0",
+		"id": "^0.0.0",
 		"jquery": "^3.5.1",
 		"popper.js": "^1.16.1",
 		"prop-types": "^15.6.1",
 		"query-string": "^5.1.1",
 		"react": "^16.14.0",
+		"react-bootstrap": "^1.5.0",
 		"react-dom": "^16.14.0",
-		"react-polyfills": "0.0.1"
+		"react-polyfills": "0.0.1",
+		"short": "^2.6.0",
+		"shortid": "^2.2.16"
 	}
 }
